--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_food"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -11,40 +12,63 @@
     tools:context="au.com.rodofile.personalcaloriecounter.FoodActivity">
 
     <EditText
-        android:id="@+id/name"
-        android:layout_width="fill_parent"
+        android:id="@+id/EditTextName"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/Food_name"
-        android:inputType="text" />
+        android:inputType="text"
+        tools:hint="Name" />
 
     <EditText
-        android:id="@+id/kilojoules"
-        android:layout_width="fill_parent"
+        android:id="@+id/EditTextKilojoules"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/Food_kilojoules"
-        android:inputType="text"
-        android:layout_below="@+id/calories"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="119dp" />
+        android:inputType="number"
+        tools:hint="Kilojoules" />
 
     <EditText
-        android:id="@+id/amount"
-        android:layout_width="fill_parent"
+    android:id="@+id/EditTextCalories"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:hint="@string/Food_calories"
+        tools:hint="Calories"
+        android:inputType="number" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+        android:id="@+id/EditTextAmount"
+        android:layout_width="161dp"
         android:layout_height="wrap_content"
         android:hint="@string/Food_amount"
-        android:inputType="text"
-        android:layout_below="@+id/calories"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="23dp" />
+            tools:hint="Amount"
+            android:inputType="number"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@+id/spinnerMeasurement" />
 
-    <EditText
-        android:id="@+id/calories"
-        android:layout_width="fill_parent"
+        <Spinner
+            android:layout_width="154dp"
+            android:layout_height="44dp"
+            android:id="@+id/spinnerMeasurement"
+            tools:prompt="@string/Food_measurement"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:spinnerMode="dialog" />
+    </RelativeLayout>
+
+    <Button
+        android:text="Save Food"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/Food_calories"
-        android:inputType="text"
-        android:layout_below="@+id/name"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="124dp" />
+        android:layout_marginBottom="34dp"
+        android:id="@+id/button" />
 
-</RelativeLayout>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
