--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -65,7 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="34dp"
-        android:id="@+id/button" />
+        android:id="@+id/buttonSaveFood" />
 
     <ListView
         android:layout_width="match_parent"
