--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -87,17 +87,30 @@
 
     </RelativeLayout>
 
-    <Button
-        android:text="Save Food"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="34dp"
-        android:id="@+id/buttonSaveFood" />
+        android:layout_height="wrap_content">
+
+        <Button
+            android:text="Save Food"
+            android:layout_width="167dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/buttonSaveFood"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
+
+        <Button
+            android:text="Clear"
+            android:layout_width="177dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/buttonClear"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+    </RelativeLayout>
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="263dp"
-        android:layout_weight="1.20"
+        android:layout_height="match_parent"
         android:id="@+id/ListViewFood" />
 
 </LinearLayout>
